# lxpanel

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  installers.yml  release.yml
apps/api/: package.json
apps/desktop-tauri/: README.md  SIGNING_AND_UPDATES.md  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
deploy/: compose.yml  docker-compose.connector.yml  lxpanel.env.example  lxpanel.service
deploy/ansible/: README.md  connector.yml  (+1 more)
docs/: RELEASE_CHECKLIST.md  architecture.md  current-sprint.md  deployment.md  e2e-encryption.md  roadmap.md  security.md
scripts/: Dockerfile  Dockerfile.connector  bundle-analyze.mjs  changelog.mjs  chaos-test.mjs  dev.mjs  diagnose-release.mjs  e2e-smoke.mjs  generate-api-client.mjs  generate-route-tests.mjs  install-linux.sh  license-issue.mjs  lxpanel-connector.mjs  migrate-state.mjs  package-connectors.mjs  package-release.mjs  security-audit.mjs  smoke.mjs  stress-report.mjs  stress-test.mjs
terraform-provider-lxpanel/: README.md  go.mod  main.go  main.tf
wiki/: Home.md  api-overview.md  architecture.md  connector-setup.md  deployment-guide.md  getting-started.md
(+161 files in other folders)
